# Array

./: CMakeLists.txt  Makefile  README.md  main.cpp
Array/: CMakeLists.txt
Array/include/: Array.hpp
tests/: CMakeLists.txt
tests/integr/: CMakeLists.txt  app.cpp  app.py
tests/unit/: CMakeLists.txt  test.cpp
