project(array_lib)

file(GLOB ARRAY_INCLUDE_DIRS ./include)
file(GLOB ARRAY_SOURCE_FILES ./src/*.cpp)

set(ARRAY_INCLUDE_DIRS ${ARRAY_INCLUDE_DIRS} PARENT_SCOPE)
set(ARRAY_LIBRARY ${PROJECT_NAME} PARENT_SCOPE)

message("ARRAY_SOURCE_FILES - ${ARRAY_SOURCE_FILES}")
message("ARRAY_INCLUDE_DIRS - ${ARRAY_INCLUDE_DIRS}")


add_library(${PROJECT_NAME} ${ARRAY_SOURCE_FILES})
target_include_directories(${PROJECT_NAME} PUBLIC ${ARRAY_INCLUDE_DIRS})